// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the Icon component When it is from a file Then matches the previous snapshot 1`] = `
<div>
  <span
    class="ui-Icon css-1ctemxb css-xnik4m-Icon"
  >
    <svg />
  </span>
</div>
`;

exports[`Given the Icon component When it is inline Then matches the previous snapshot 1`] = `
<div>
  <span
    class="ui-Icon css-1ctemxb css-xnik4m-Icon"
  >
    <div />
  </span>
</div>
`;
